# pandora

./: .codespellignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  README_AI_ANALYSIS.md  code_of_conduct.md  docker-compose.yml  mypy.ini  pyproject.toml  security.md  tox.ini
.github/workflows/: codeql-analysis.yml  codeql.yml  docker-publish.yml  lint.yml  mypy.yml  scorecards-analysis.yml  semgrep.yml  test_api.yml
cache/: cache.conf  run_redis.sh
config/: allowlist.yml  disclaimer.tmpl.sample  docker.json  email.tmpl  email_blocklist.yml  generic.json.sample  mail.json.sample  misptest_local.json.sample  misptest_local.tmpl  roles.yml  special_disclaimer.tmpl.sample  task_status_message_danger.tmpl.sample  task_status_message_error.tmpl.sample  task_status_message_info.tmpl.sample  task_status_message_overwrite.tmpl.sample  task_status_message_success.tmpl.sample  task_status_message_warning.tmpl.sample  workers.yml  workers.yml.sample
doc/: Administration Guide.md
etc/logrotate.d/: pandora
etc/systemd/system/: pandora.service.sample
indexing/: kvrocks.conf
pandora/: __init__.py  exceptions.py  extractor_count.py  file.py  helpers.py  indexing.py  mail.py  observable.py  pandora.py  report.py  role.py  storage_client.py  task.py  text_parser.py  user.py
pandora/default/: __init__.py  abstractmanager.py  exceptions.py  helpers.py
pandora/workers/: ai_analysis.py  base.py  base.yml.sample  blocklists.py  blocklists.yml.sample  clamav.py  clamav.yml.sample  comodo.py  comodo.yml.sample  extractor.py  extractor.yml.sample  file.py  hashlookup.py  hashlookup.yml.sample  hybridanalysis.py  hybridanalysis.yml.sample  irma.py  irma.yml.sample  joesandbox.py  joesandbox.yml.sample  lookyloo.py  lookyloo.yml.sample  malwarebazaar.py  malwarebazaar.yml.sample  misp.py  misp.yml.sample  msodde.py  msodde.yml.sample  mwdb.py  mwdb.yml.sample  observables.py  observables.yml.sample  odf.py  odf.yml.sample  ole.py  ole.yml.sample  olevba.py  outlookmsg.py  outlookmsg.yml.sample  pdf.py  (+20 more)
pandora/workers/ai_analysis/: __init__.py  ai_analysis.py  ai_analysis.yml.sample
storage/: kvrocks.conf  run_kvrocks.sh  run_redis.sh  storage.conf
tests/: test_ai_analysis.py
tools/: 3rdparty.py  clear_running_service.py  clear_sessions.py  delete_old_files.py  generate_sri.py  reset_status.py  subscriber.py  update_task_paths.py  validate_config_files.py
website/web/: __init__.py  generic_api.py  helpers.py  redisserverssession.py  sri.txt
website/web/static/css/: style.css
website/web/static/images/favicons/: site.webmanifest
website/web/static/js/: analysis.js  dashboard.js  observable.js  render_tables.js  role.js  stats.js  submit.js
website/web/templates/: admin.html  analysis.html  analysis_fr.html  base.html  default_worker.html  error.html  extracted.html  extractor.html  lookyloo.html  macros.html  observables.html  observables_list.html  observables_lists.html  previews.html  roles.html  stats.html  submit.html  submit_fr.html  tasks.html  users.html  virustotal.html
