[tool.poetry]
name = "pandora"
version = "0.1"
description = "Pandora analysis framework."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL-3.0-or-later"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
unoserver_launcher = "bin.unoserver_launcher:main"
workers_manager = "bin.workers_manager:main"
start_website = "bin.start_website:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
redis = {version = "^4.1.4", extras = ["hiredis"]}
flask-restx = "^0.5.1"
gunicorn = "^20.1.0"
Flask-Session = "^0.4.0"
Flask-Moment = "^1.0.2"
Flask-Login = "^0.5.0"
Bootstrap-Flask = "^2.0.2"
PyYAML = "^6.0"
Flask-WTF = "^1.0.0"
validators = "^0.18.2"
python-magic = "^0.4.25"
PyMuPDF = "^1.19.6"
requests = "^2.27.1"
textract = "^1.6.4"
PyExifTool = "^0.4.13"
eml-parser = "^1.17.0"
unoserver = "^1.1"
weasyprint = "^54.2"
extract-msg = "^0.29"
Pillow = "^9.0.1"
oletools = {git = "https://github.com/decalage2/oletools.git", branch = "master", extras = ["full"]}
py7zr = "^0.17.4"
jbxapi = "^3.17.2"
defusedxml = "^0.7.1"
mwdblib = "^4.0.0"
pyhashlookup = "^1.1.1"
vt-py = "^0.13.1"
malwarebazaar = "^0.1.3"
irmacl-async = "^3.3.0"
yara-python = "^4.1.3"
svglib = "^1.2.1"
clamd = "^1.0.2"

[tool.poetry.dev-dependencies]
ipython = "^8.1.1"
mypy = "^0.931"
types-setuptools = "^57.4.9"
types-redis = "^4.1.16"
types-PyYAML = "^6.0.3"
types-requests = "^2.27.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
