[tool.poetry]
name = "pandora"
version = "0.8"
description = "Pandora analysis framework."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL-3.0-or-later"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
unoserver_launcher = "bin.unoserver_launcher:main"
workers_manager = "bin.workers_manager:main"
start_website = "bin.start_website:main"
imap_fetcher = "bin.imap_fetcher:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
redis = {version = "^4.2.2", extras = ["hiredis"]}
flask-restx = "^0.5.1"
gunicorn = "^20.1.0"
Flask-Session = "^0.4.0"
Flask-Moment = "^1.0.2"
Flask-Login = "^0.6.1"
Bootstrap-Flask = "^2.0.2"
PyYAML = "^6.0"
Flask-WTF = "^1.0.0"
validators = "^0.19.0"
python-magic = "^0.4.26"
PyMuPDF = "^1.19.6"
requests = "^2.27.1"
textract = {git = "https://github.com/rafiot/textract.git", branch = "master"}
PyExifTool = "<0.5"
eml-parser = "^1.17.0"
unoserver = "^1.2"
weasyprint = "^55.0"
extract-msg = "^0.30.12"
Pillow = "^9.1.1"
oletools = {version = "0.60.1", extras = ["full"]}
py7zr = "^0.18.1"
jbxapi = "^3.17.2"
defusedxml = "^0.7.1"
mwdblib = "^4.0.0"
pyhashlookup = "^1.1.1"
vt-py = "^0.14.0"
malwarebazaar = "^0.1.3"
irmacl-async = "^3.3.0"
yara-python = "^4.1.3"
svglib = "^1.2.1"
clamd = "^1.0.2"
rarfile = "^4.0"
publicsuffix2 = "^2.20191221"
pymispwarninglists = "^1.3"
pikepdf = "^5.1.3"
imapclient = "^2.1.0"
pyzipper = "^0.3.5"
pymisp = "^2.4.157"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
mypy = "^0.950"
types-setuptools = "^57.4.15"
types-redis = "^4.2.5"
types-PyYAML = "^6.0.3"
types-requests = "^2.27.27"
types-python-dateutil = "^2.8.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
