[tool.poetry]
name = "pandora"
version = "1.1.0"
description = "Pandora analysis framework."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL-3.0-or-later"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
unoserver_launcher = "bin.unoserver_launcher:main"
workers_manager = "bin.workers_manager:main"
start_website = "bin.start_website:main"
imap_fetcher = "bin.imap_fetcher:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
redis = {version = "^4.3.4", extras = ["hiredis"]}
flask-restx = "^0.5.1"
gunicorn = {version = "^20.1.0", extras = ["setproctitle"]}
Flask-Session = "^0.4.0"
Flask-Moment = "^1.0.4"
Flask-Login = "^0.6.2"
Bootstrap-Flask = "^2.1.0"
PyYAML = "^6.0"
Flask-WTF = "^1.0.1"
validators = "^0.20.0"
python-magic = "^0.4.27"
PyMuPDF = "^1.20.2"
requests = "^2.28.1"
textract = {git = "https://github.com/rafiot/textract.git", branch = "master"}
PyExifTool = "<0.5"
eml-parser = "^1.17.0"
unoserver = "^1.2"
weasyprint = "^56.1"
extract-msg = {version = "^0.36.4", extras = ["all"]}
Pillow = "^9.2.0"
oletools = {version = "0.60.1", extras = ["full"]}
py7zr = "^0.20.0"
jbxapi = "^3.18.0"
defusedxml = "^0.7.1"
mwdblib = "^4.3.1"
vt-py = "^0.17.1"
malwarebazaar = "^0.1.4"
irmacl-async = "^3.4.1"
yara-python = "^4.2.3"
svglib = "^1.4.1"
clamd = "^1.0.2"
rarfile = "^4.0"
publicsuffix2 = "^2.20191221"
pymispwarninglists = "^1.4"
pikepdf = "^6.1.0"
imapclient = "^2.3.1"
pyzipper = "^0.3.6"
pymisp = {version = "^2.4.162.1", extras = ["fileobjects"]}
python-dateutil = "^2.8.2"
pycdlib = "^1.13.0"
werkzeug = "2.1.2"
pyhashlookup = "^1.2.1"
pylookyloo = "^1.15.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
mypy = "^0.981"
types-redis = "^4.3.21"
types-PyYAML = "^6.0.12"
types-requests = "^2.28.11"
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
